[project]
name = "hackaton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Victor Duault", email = "victorduault@icloud.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hackaton = "hackaton:main"
main = "hackaton.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
